--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "twrnc": "^4.5.1",
-    "victory-native": "^41.1.0"
+    "victory-native": "^41.1.0",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
