--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start --port 3000",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -42,11 +42,11 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.6.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "twrnc": "^4.5.1",
-    "victory-native": "^41.1.0",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "victory-native": "^41.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
