--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --port 3000",
+    "start": "concurrently \"npx json-server db.json -p 3001\" \"expo start --port 3000\"",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-segmented-control/segmented-control": "^2.5.2",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
@@ -31,14 +32,19 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "json-server": "^1.0.0-beta.2",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-auto-size-text": "^1.1.1",
+    "react-native-autocomplete-dropdown": "^4.0.0-rc.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.29",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-modalize": "^2.1.1",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -55,8 +61,10 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "json-server": "^0.17.3",
     "postcss-loader": "^4.2.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
